package com.directi.training.isp.exercise;

public interface ProximitySensor {
    void proximityCallback();
} 