package com.directi.training.isp.exercise;

public interface TimerClient {
    void timeOutCallback();
} 